Unit tests adapted to removal of source field in scheduleEvent